--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="app-shell" data-state="ready">
       <header class="app-header" role="banner">
-        <button class="app-header__menu-button" type="button">menu</button>
+        <button id="btnQuickLinks" class="app-header__menu-button" type="button">menu</button>
       </header>
       <div class="layout">
         <main id="panel" class="panel" role="main" tabindex="-1">
@@ -130,6 +130,26 @@
             </button>
           </li>
         </ul>
+      </div>
+    </div>
+    <div
+      id="quick-links"
+      class="quick-links-overlay"
+      role="dialog"
+      aria-modal="true"
+      aria-label="Links rápidos"
+      hidden
+    >
+      <div class="quick-links__panel" role="document" data-quick-links-panel>
+        <button
+          type="button"
+          class="ghost icon-only quick-links__close"
+          data-quick-links-close
+        >
+          <span class="sr-only" data-i18n="actions.close">Fechar</span>
+          <span aria-hidden="true">✕</span>
+        </button>
+        <div class="quick-links__content" data-quick-links-content></div>
       </div>
     </div>
     <div
